core/scss/prototype.scss
/* ==========================================================================
  Bedrock specific styles
   ========================================================================== */

@import "vendor/codemirror";

/* Variables
   ========================================================================== */

$br-rem-multiplier: 0.625 !default;

$br-heading-font-weight: 700 !default;

$br-background: #FFF !default;
$br-color-text: #333 !default;
$br-color-headings: #000 !default;

$br-default-border-color: #DDD !default;
$br-default-hover-bg-color: #F0F0F0 !default;
$br-code-background: $br-default-hover-bg-color !default;
$br-code-border-color: #DDD !default;
$br-sample-border-color: $br-default-border-color !default;

$br-switch-breakpoint: 800px;

$br-styleguide-sidebar-width: 22% !default; // Only supply a single % value here
$br-styleguide-content-width: (100% - $br-styleguide-sidebar-width);

$br-styleguide-sidebar-padding-top: 3.2rem*$br-rem-multiplier !default;
$br-styleguide-sidebar-padding-right: 3.2rem*$br-rem-multiplier !default;
$br-styleguide-sidebar-padding-bottom: 3.2rem*$br-rem-multiplier !default;
$br-styleguide-sidebar-padding-left: 3.2rem*$br-rem-multiplier !default;

$br-styleguide-content-padding-top: 3.2rem*$br-rem-multiplier !default;
$br-styleguide-content-padding-right: 3.2rem*$br-rem-multiplier !default;
$br-styleguide-content-padding-bottom: 3.2rem*$br-rem-multiplier !default;
$br-styleguide-content-padding-left: 3.2rem*$br-rem-multiplier !default;

@import "../../content/scss/br-variables-override";


/* Basic setup
   ========================================================================== */

.br-styleguide-default-styles-active {
  
  height: 100%;
  position: static !important; // Override any “kill bouncy scroll” type code
  @media (min-width: $br-switch-breakpoint) {
    position: relative !important;
  }

  body {
    height: 100%;
    overflow: visible !important; // Override any utility classes killing scroll
    position: static !important; // Override any “kill bouncy scroll” type code
    // Only kill the body scroll from a certain mq
    @media (min-width: $br-switch-breakpoint) {
      overflow: hidden;
      position: relative !important;
    }
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;

    background: #FFF;
  }

  // Default style for 2 column layout in styleguide

  .br-styleguide-container {
    height: 100%;
    box-sizing: border-box;
  }

  .br-styleguide-navigation-holder {
    box-sizing: border-box;
    padding:
      $br-styleguide-sidebar-padding-top
      $br-styleguide-sidebar-padding-right
      $br-styleguide-sidebar-padding-bottom
      $br-styleguide-sidebar-padding-left;

    // Only init 2 columns and scroll from a certain mq
    @media (min-width: $br-switch-breakpoint) {
      height: 100%;
      width: $br-styleguide-sidebar-width;
      float: left;
      overflow: auto;
      -webkit-overflow-scrolling: touch;
    }
  }
  
  .br-styleguide-container-inner {
    height: 100%;
  }

  .br-styleguide-content {
    background: #FFF;
    box-sizing: border-box;
    padding:
      $br-styleguide-content-padding-top
      $br-styleguide-content-padding-right
      $br-styleguide-content-padding-bottom
      $br-styleguide-content-padding-left;
    // Only init 2 columns and scroll from a certain mq
    @media (min-width: $br-switch-breakpoint) {
      height: 100%;
      width: $br-styleguide-content-width;
      float: left;
      overflow: auto;
      -webkit-overflow-scrolling: touch;
    }
  }

}

/* ==========================================================================
  br-prototype-nav
   ========================================================================== */

/* Variables
   ========================================================================== */

$br-prototype-nav-width: 250px; // Keep this in px please, otherwise it gets buggy

/* Sidebar
   ========================================================================== */

// We are supposing this is true within all projects
html.br-styleguide,
.br-styleguide body {
  margin: 0;
}

html.br-prototype-nav-is-open {
  position: relative;
  left: $br-prototype-nav-width;
  width: calc(100% - #{$br-prototype-nav-width});
}

.br-prototype-nav {
  background-color: #FFF;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  line-height: 1.5;
  z-index: 2000;
  transform: translateX(-100%);
  width: $br-prototype-nav-width;
  overflow: hidden;
  display: flex;
  flex-direction: column;

  .br-prototype-nav-inner {
    padding: 2rem*$br-rem-multiplier;
    overflow: hidden;
    overflow-y: auto;
  }

  &.br-prototype-nav-open {
    transform: translateX(0);
    box-shadow: 0.2rem*$br-rem-multiplier 0 0.5rem*$br-rem-multiplier rgba(#000, 0.3);
  }
}

.br-prototype-lang {
  font-size: 1.3rem*$br-rem-multiplier;
}

.br-prototype-langselector {
  margin-bottom: 10px;
}

.br-prototype-nav-text {
  font-size: 1.3rem*$br-rem-multiplier;
  margin: 0;
  padding: 0 0 0.6rem*$br-rem-multiplier;
  color: rgba(#000,0.5);
}

/* Headings (both on index page and in sidebar)
   ========================================================================== */

.br-prototype-nav-main-heading {
  color: #000;
  font-weight: $br-heading-font-weight;
  margin: 0;
}

/* Index page
   ========================================================================== */

.br-prototype-nav-index {
  padding: 2rem*$br-rem-multiplier;
}

.br-prototype-nav-index-cols {
  column-count: 3;
  li {
    break-inside: avoid;
  }
}

/* Page states
   ========================================================================== */

.br-prototype-page-states {
  background: rgba(#FFF,0.05);
  box-shadow: 0.2rem*$br-rem-multiplier 0 0.5rem*$br-rem-multiplier rgba(#000, 0.3);
  margin-top: auto;
  padding: 2rem*$br-rem-multiplier;
}
/* ... */

